--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="">
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>:: Creative Pixel Studio One Page HTML Template ::</title>
+<title>Unifit - Best Uniform Manufacturer and Supplier in UAE</title>
 
 <link rel="shortcut icon" href="img/favicon.png" />
 
